# Epitech_Indie_Studio

./: CMakeLists.txt
include/: Error.hpp  ICore.hpp
include/Component/: Camera.hpp  Controller.hpp  IComponent.hpp  Image.hpp  KeyEvent.hpp  Model.hpp  Mouse.hpp  Music.hpp  Save.hpp  Sound.hpp  Text.hpp  Textures.hpp  Window.hpp
include/Game/: AI.hpp  Bomb.hpp  BombList.hpp  BombMax.hpp  Game.hpp  Introduction.hpp  Map.hpp  Menu.hpp  MoveAI.hpp  Pause.hpp  Player.hpp  RangeMax.hpp  SpeedMax.hpp  ThroughWall.hpp  WallPass.hpp
include/Input/: ArrowDown.hpp  ArrowLeft.hpp  ArrowRight.hpp  ArrowUp.hpp  Background.hpp  Border.hpp  Button.hpp  ChangePlayer.hpp  ChangeSizeMap.hpp  Gamepad.hpp  HowToPlay.hpp  InputHandler.hpp  Key.hpp  Minus.hpp  Plus.hpp  Quit.hpp  Setting.hpp  SplashScreen.hpp  Start.hpp
src/: Error.cpp  main.cpp
src/Component/: Camera.cpp  Controller.cpp  Image.cpp  KeyEvent.cpp  Model.cpp  Mouse.cpp  Music.cpp  Save.cpp  Sound.cpp  Text.cpp  Textures.cpp  Window.cpp
src/Game/: AI.cpp  Bomb.cpp  BombList.cpp  BombMax.cpp  Game.cpp  Introduction.cpp  Map.cpp  Menu.cpp  MoveAI.cpp  Pause.cpp  Player.cpp  RangeMax.cpp  SpeedMax.cpp  ThroughWall.cpp  WallPass.cpp
src/Input/: ArrowDown.cpp  ArrowLeft.cpp  ArrowRight.cpp  ArrowUp.cpp  Background.cpp  Border.cpp  Button.cpp  ChangePlayer.cpp  ChangeSizeMap.cpp  Gamepad.cpp  HowToPlay.cpp  Key.cpp  Minus.cpp  Plus.cpp  Quit.cpp  Setting.cpp  SplashScreen.cpp  Start.cpp
tests/: Makefile  cr_test_error_handling.cpp
